--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
+    "@reduxjs/toolkit": "^2.2.1",
     "@types/react": "~18.2.45",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
@@ -21,6 +22,7 @@
     "react-native-elements": "^3.4.3",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-redux": "^9.1.0",
     "typescript": "^5.3.0"
   },
   "devDependencies": {
