--- a/app.json
+++ b/app.json
@@ -27,7 +27,15 @@
       "favicon": "./assets/favicon.png"
     },
     "plugins": [
-      "expo-font"
+      "expo-font",
+      "@stream-io/video-react-native-sdk",
+      [
+        "@config-plugins/react-native-webrtc",
+        {
+          "cameraPermission": "Allow MediCare to access your camera",
+          "microphonePermission": "Allow MediCare to access your microphone"
+        }
+      ]
     ]
   }
 }
