--- a/package.json
+++ b/package.json
@@ -9,20 +9,37 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@config-plugins/react-native-webrtc": "^8.0.0",
+    "@gorhom/bottom-sheet": "^4.6.1",
+    "@notifee/react-native": "^7.8.2",
+    "@react-native-community/netinfo": "11.1.0",
     "@react-navigation/bottom-tabs": "^6.5.19",
     "@react-navigation/native": "^6.1.16",
     "@react-navigation/native-stack": "^6.9.25",
     "@reduxjs/toolkit": "^2.2.1",
+    "@stream-io/react-native-webrtc": "^118.0.1",
+    "@stream-io/video-react-native-sdk": "^0.5.7",
     "@types/react": "~18.2.45",
     "expo": "~50.0.7",
     "expo-font": "~11.10.3",
+    "expo-image-manipulator": "^11.8.0",
+    "expo-image-picker": "^14.7.1",
+    "expo-media-library": "^15.9.1",
     "expo-status-bar": "~1.11.1",
     "react": "18.2.0",
     "react-native": "0.73.4",
     "react-native-elements": "^3.4.3",
+    "react-native-gesture-handler": "^2.15.0",
+    "react-native-incall-manager": "^4.2.0",
+    "react-native-loading-spinner-overlay": "^3.0.1",
+    "react-native-reanimated": "^3.8.1",
     "react-native-safe-area-context": "^4.9.0",
     "react-native-screens": "^3.29.0",
+    "react-native-svg": "14.1.0",
+    "react-native-toast-message": "^2.2.0",
     "react-redux": "^9.1.0",
+    "stream-chat-expo": "^5.26.0",
+    "stream-chat-react-native": "^5.26.0",
     "typescript": "^5.3.0"
   },
   "devDependencies": {
